# SMA-OS

./: .coderabbit.yaml  .env.example  .gitignore  AGENTS.md  AI_DEVELOPER_GUIDE.md  CODE_REVIEW_ISSUES.md  CONTRIBUTING.md  Dockerfile.services  LICENSE  README.md  README_ZH.md  RELEASE_NOTES.md  SECURITY_AUDIT.md  build-ebpf.sh  docker-compose.yml  e2e-test.ps1
.github/workflows/: ci.yml  dependency-reminder.yml  ebpf.yml  security.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: failure-reconnection-task-assignment-analysis.md  further-development-plan.md  identity-scheduling-development-plan.md  plan-requirements-failure-reconnection.md  project-roadmap-overview.md  sma-os-completion-plan.md  sma-os-cultural-background.md  sma-os-governance-model.md
.sisyphus/evidence/: task-2-local-cache.txt  task-3-singleflight.txt
.sisyphus/plans/: cache-reuse-implementation.md  phase2-production-readiness.md  reward-punishment-implementation-plan.md  sma-os-completion.md  sma-os-failure-reconnection-implementation.md
.trae/specs/code-review-improvement/: checklist.md  spec.md  tasks.md
benchmarks/: AGENTS.md  README.md  README_ZH.md
benchmarks/configs/: benchmark-config.yaml
benchmarks/go/: benchmark_test.go
benchmarks/rust/: Cargo.toml
benchmarks/rust/benches/: latency_bench.rs  microvm_bench.rs  state_engine_bench.rs  throughput_bench.rs
benchmarks/scenarios/: latency.json  throughput.json
benchmarks/scripts/: compare.sh  generate-report.sh  run-all.sh
chaos-tests/: AGENTS.md  Cargo.toml  README.md  README_ZH.md
chaos-tests/configs/: chaos-config.yaml
chaos-tests/framework/: chaos.go  reporter.go
chaos-tests/scripts/: cleanup.sh  run-all.sh
chaos-tests/src/: framework.rs  main.rs
chaos-tests/src/reporters/: json.rs  mod.rs
chaos-tests/src/scenarios/: latency_injection.rs  mod.rs  network_partition.rs  node_failure.rs  resource_exhaustion.rs
config/: multi-region.yaml
config/enterprise/: sla.yaml  support.yaml
control-plane/: Cargo.toml
control-plane/formal-verifier/: AGENTS.md  SMA_OS.cfg  SMA_OS.tla
control-plane/fractal-gateway/: AGENTS.md  Cargo.toml
control-plane/fractal-gateway-ebpf/: AGENTS.md  Cargo.toml  README.md  README_ZH.md  USAGE.md  build.rs
control-plane/fractal-gateway-ebpf/src/: aggregator.rs  cgroup.rs  collector.rs  lib.rs  main.rs  quota.rs
control-plane/fractal-gateway/src/: main.rs  security.rs
control-plane/identity/: Cargo.toml
control-plane/identity/src/: audit.rs  lib.rs  manager.rs  types.rs
control-plane/identity/tests/: integration_test.rs
control-plane/state-engine/: .env.example  AGENTS.md  Cargo.toml  FIXES_APPLIED.md  TASK_1_1_COMPLETE.md  build.rs  compile_err.txt
control-plane/state-engine/migrations/: 20231010000000_create_hot_events.sql
control-plane/state-engine/proto/: state_engine.proto
control-plane/state-engine/src/: cluster.rs  engine.rs  failover.rs  grpc_service.rs  lib.rs  limiter.rs  main.rs  metrics.rs  models.rs  pool.rs
control-plane/state-engine/src/cache/: local.rs  mod.rs
control-plane/teardown-ctrl/: AGENTS.md  Cargo.toml
control-plane/teardown-ctrl/src/: controller.rs  main.rs
control-plane/xtask/: Cargo.toml
control-plane/xtask/src/: main.rs
docker/: Dockerfile.ebpf
docs/: DEPLOYMENT.md  identity-scheduling-impact-assessment.md
docs/contributing/: CONTRIBUTING.md  CONTRIBUTING_ZH.md
docs/dev/: AGENTS.md  AI_DEVELOPER_GUIDE.md
docs/ops/: DEPLOYMENT.md  DEPLOYMENT_ZH.md  RELEASE_NOTES.md  RELEASE_NOTES_ZH.md
docs/research/: distributed-systems-reconnection-task-allocation.md
execution-layer/: Cargo.toml
execution-layer/configs/: README.md  README_ZH.md  firecracker-config.json  network-config.json  vm-specs.json
execution-layer/images/: README.md  README_ZH.md
execution-layer/sandbox-daemon/: AGENTS.md  Cargo.toml
execution-layer/sandbox-daemon/src/: api.rs  firecracker.rs  health.rs  main.rs  microvm.rs  pool.rs
execution-layer/stateful-repl/: AGENTS.md  Cargo.toml
execution-layer/stateful-repl/src/: main.rs
memory-bus/: go.mod  go.sum
memory-bus/ingestion/: AGENTS.md  ingestion_test.go  main.go
memory-bus/ingestion/internal/cache/: dedup.go  dedup_test.go  local.go  local_test.go  manager.go  manager_test.go  redis.go
memory-bus/ingestion/internal/llm/: manager.go  provider.go  providers.go
memory-bus/ingestion/test/: benchmark_test.go  cache_hit_test.go  integration_test.go  stampede_test.go
memory-bus/vector-kv/: AGENTS.md  main.go  vector_kv_test.go
observability-ui/web-dashboard/: AGENTS.md  README.md  README_ZH.md  package-lock.json  package.json
observability-ui/web-dashboard/app/: globals.css  page.tsx
orchestration/: coverage.out  go.mod
orchestration/config/: feature_flags.go  feature_flags_test.go
orchestration/evaluator/: AGENTS.md  evaluator_test.go  main.go
orchestration/manager/: AGENTS.md  api.go  api_test.go  checkpoint.go  checkpoint_test.go  dependency_analysis.go  dependency_analysis_test.go  main.go  manager_test.go  pause_resume.go  pause_resume_test.go  progress.go  progress_test.go
orchestration/planner/: AGENTS.md  bridge.go  bridge_test.go  conflict.go  conflict_test.go  coverage.out  decomposer.go  decomposer_test.go  go.mod  integration_test.go  llm_decomposer.go  types.go
orchestration/scheduler/: AGENTS.md  main.go  scheduler_test.go
orchestration/types/: identity.go  task.go
orchestration/utils/: backoff.go  backoff_test.go
plugins/: AGENTS.md
plugins/core/: Cargo.toml
plugins/core/src/: executor.rs  lib.rs  loader.rs  manifest.rs  registry.rs  sandbox.rs
plugins/marketplace/: Cargo.toml
plugins/marketplace/src/: installer.rs  lib.rs  registry_client.rs  store.rs  validator.rs
scripts/: check-env.ps1  cleanup.sh  start-services.sh  update-version.sh
security-audit/: AGENTS.md  Cargo.toml
security-audit/src/: main.rs  report.rs
sma-proto/: AGENTS.md  README.md  README_ZH.md  go.mod  identity.proto  sandbox.proto  task.proto
tests/benchmark/: go.mod  progress_bench_test.go
tests/e2e/: go.mod  pause_resume_test.go
(+6 files in other folders)
