[workspace]
members = [
    "sandbox-daemon",
    "stateful-repl"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyperlocal = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
regex = "1.10"
