[package]
name = "fractal-gateway-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
# eBPF runtime
aya-ebpf = "*"
aya-log-ebpf = "*"
network-types = "0.0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.34", features = ["rt", "sync", "time"] }

# Metrics and observability
prometheus-client = "0.22"
opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.15", features = ["metrics", "tonic"] }
opentelemetry-proto = { version = "0.5", features = ["gen-tonic"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Collections
dashmap = "5.5"
parking_lot = "0.12"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
