[package]
name = "fractal-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
tokio = { version = "1.34", features = ["rt", "rt-multi-thread", "net", "signal", "macros"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
