[package]
name = "state-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# Phase 3: Scaling dependencies
dashmap = "5.5"
arc-swap = "1.7"
governor = "0.2"
deadpool = "0.10"
async-trait = "0.1"
# TODO: Phase 3.1b - Add tonic/prost for gRPC when protoc is available
# tonic = "0.11"
# prost = "0.12"
