[package]
name = "state-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "json", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"

# Phase 3: Scaling dependencies
dashmap = "5.5"
arc-swap = "1.7"
governor = "0.2"
async-trait = "0.1"
prometheus = "0.13"
hyper = { version = "0.14", features = ["full"] }
moka = { version = "0.12", features = ["future"] }

# Phase 4: gRPC service
tonic = "0.12"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"

