[package]
name = "sma-plugin-core"
version = "0.1.0"
edition = "2021"
description = "Core plugin system for SMA-OS"
authors = ["SMA-OS Team"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
tokio = { version = "1.34", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"