[package]
name = "sma-marketplace"
version = "0.1.0"
edition = "2021"
description = "Plugin marketplace for SMA-OS"
authors = ["SMA-OS Team"]
license = "MIT OR Apache-2.0"

[dependencies]
sma-plugin-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
semver = "1.0"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"